--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-telegram.botName= ReminderExtraBot
-telegram.token= 5107406982:AAHbzCS3JnpVYuu42Dy0Jsvg5MrPbBFuhAA
+telegram.botName=
+telegram.token= 
 
 
   spring.datasource.url= jdbc:postgresql://localhost:5432/ReminderBot
   spring.datasource.username= postgres
-  spring.datasource.password= 12345
+  spring.datasource.password= 159753
 
 
   spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
